
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- [#5139] Fix issues with MODx.Browser and file/image TVs in other contexts
- [#4586] Improve number detection for Radio and Checkbox TV values
- [#5196] Unset uri_override when duplicating creates a duplicate uri
- [#4958] Add IDs to Resource Groups in RG tree
- Add ability to rename Resource Groups
- [#5185] Improve core package already extracted validation for upgrades
- Update xPDO and regenerate schema to get new maps of derivative classes
- [#5195] Change TV value fields from TEXT to MEDIUMTEXT (mysql)
- [#5141] Add ability to override specific controllers/templates in a custom manager theme w/ fallback to default
- Add modResource::getControllerPath method for better abstraction of derivative resource types
- Add show_in_tree and hide_children_in_tree fields to modResource for better support with custom Resource types
- Abstract all manager controllers to classes to improve usability, testing and creation of controllers

MODX Revolution 2.1.2-pl (July 6, 2011)
====================================
- Fix issue with modUser::getSettings pulling a deprecated alias
- Update to xPDO v2.1.5-pl
- Implement DocBlox for documentation generation
- [#5168] Fix element and tv permission queries for SQL Server
- [#5146] Fix issue with Firefox and button widths
- [#5164] Fix possible issue if a TV is stranded to a non-existent category
- Update ExtJS to 3.4.0
- Set a default session_gc_maxlifetime to avoid frequent logout issues
- Refresh modExt trees when drag operations fail
- [#4918] Limit save permission check to modified nodes in resource/sort processor
- [#5065] Fix 404 error with cross-context symlinks when cacheable
- [#5152] Fix nested non-cacheable tags from being cached in modResource->_content