@@ -124,6 +124,11 @@ class modPropertySet extends xPDOSimpleObject {
                         'lexicon' => null,
                     );
                 }
+                
+                if ($propertyArray['type'] == 'combo-boolean' && is_numeric($propertyArray['value'])) {
+                    $propertyArray['value'] = (boolean)$propertyArray['value'];
+                }
+                
                 /* handle translations of properties (temp fix until modLocalizableObject in 2.1 and beyond) */
                 /*if (!empty($propertyArray['lexicon'])) {
                     $this->xpdo->lexicon->load($propertyArray['lexicon']);
