@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- [#3716] Ensure consistent handling of combo-boolean property values in the database
 - [#5139] Fix issues with MODx.Browser and file/image TVs in other contexts
 - [#4586] Improve number detection for Radio and Checkbox TV values
 - [#5196] Unset uri_override when duplicating creates a duplicate uri
